# rust-data-for-seo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  readme.md
examples/: backlinks_overview.rs  keywords_search_volume.rs  labs_keyword_research.rs  onpage_audit.rs  quick_start.rs  serp_live.rs  serp_task_flow.rs
src/: error.rs  lib.rs
src/api/: id_list.rs  mod.rs
src/api/ai_optimization/: ai_keyword_data.rs  llm_mentions.rs  llm_responses.rs  llm_scraper.rs  mod.rs  provider.rs
src/api/app_data/: apple.rs  google.rs  mod.rs
src/api/appendix/: mod.rs
src/api/backlinks/: mod.rs
src/api/business_data/: mod.rs
src/api/content_analysis/: mod.rs
src/api/content_generation/: mod.rs
src/api/dataforseo_labs/: amazon.rs  apple.rs  google.rs  mod.rs
src/api/domain_analytics/: mod.rs  technologies.rs  whois.rs
src/api/keywords_data/: mod.rs
src/api/merchant/: amazon.rs  google.rs  mod.rs
src/api/on_page/: mod.rs
src/api/serp/: mod.rs
src/entity/: id_list.rs  mod.rs
src/entity/ai_optimization/: ai_keyword_data.rs  common.rs  llm_mentions.rs  llm_responses.rs  llm_scraper.rs  mod.rs
src/entity/app_data/: app_info.rs  app_list.rs  app_reviews.rs  app_searches.rs  mod.rs
src/entity/appendix/: mod.rs
src/entity/backlinks/: anchor.rs  backlinks.rs  backlinks_list.rs  bulk_backlinks.rs  bulk_new_lost_backlinks.rs  bulk_new_lost_referring_domains.rs  bulk_pages_summary.rs  bulk_ranks.rs  bulk_referring_domains.rs  bulk_spam_score.rs  competitors.rs  domain_intersection.rs  domain_pages.rs  domain_pages_summary.rs  errors.rs  history.rs  id_list.rs  index.rs  mod.rs  page_intersection.rs  (+5 more)
tests/: ai_optimization.rs  app_data.rs  appendix.rs  backlinks.rs  business_data.rs  content_analysis.rs  content_generation.rs  dataforseo_labs.rs  domain_analytics.rs  keywords_data.rs  merchant.rs  on_page.rs  serp.rs  serp_bing.rs  test.rs
(+240 files in other folders)
