[package]
name = "data-for-seo"
version = "0.1.0"
edition = "2021"

[dependencies]


serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
reqwest = { version = "0.12.9", features = [ "json"] }
#reqwest = { version = "0.12.9", features = ["multipart", "blocking", "json", "stream"] }

base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "~1", features = ["full"] }
dotenv = "0.15.0"