[package]
name = "data-for-seo"
version = "0.1.14"
edition = "2024"


authors = ["uiuifree"]
description = "DataForSEO API for Rust"
license = "MIT"
keywords = ["DataForSeo", "seo"]
readme = "readme.md"
repository = "https://github.com/uiuifree/rust-data-for-seo"

[dependencies]


serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
reqwest = { version = "0.12.12", features = ["json"] }
#reqwest = { version = "0.12.9", features = ["multipart", "blocking", "json", "stream"] }

base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "~1", features = ["full"] }
dotenv = "0.15.0"
csv = "1.3.1"