[package]
name = "data-for-seo"
version = "0.2.0"
edition = "2024"
authors = ["uiuifree"]
description = "Client library for the DataForSEO API v3 (SERP, Keywords Data, Labs, Backlinks, OnPage, and more)"
license = "MIT"
keywords = ["dataforseo", "seo", "serp", "backlinks", "keywords"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
repository = "https://github.com/uiuifree/rust-data-for-seo"
documentation = "https://docs.rs/data-for-seo"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
